plot compare_nbody

--- a/codes/plot/pkd_out.ipynb
+++ b/codes/plot/pkd_out.ipynb
@@ -34,12 +34,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "67e507f5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = np.loadtxt('../../data/pkd_out/pkdgrav3_test.01000.pk')\n",
+    "data = np.loadtxt('../../data/pkd_out/pkdgrav3_test.01000.pypk')\n",
     "k_1000 = data[:, 0]\n",
     "pk_1000 = data[:, 1]\n",
     "nk_1000 = data[:, 2]"
